# carbon-footprint-calculator

./: CMakeLists.txt  README.md  build.sh
headers/: GeoEncoder.hpp  activity.hpp  csv_reader.hpp  electricity.hpp  emission_classifier.hpp  food.hpp  statistics.hpp  transport.hpp  user.hpp
main/: lib.cpp  map.html  map_red_zones.html  t.cpp  testing.cpp  zone_data.js
src/: GeoEncoder.cpp  csv_reader.cpp  electricity.cpp  food.cpp  statisitcs.cpp  transport.cpp  user.cpp
